manifest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  labels:
    app: expense-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-tracker
  template:
    metadata:
      name: backend-pod
      labels:
        app: expense-tracker
    spec:
      containers:
        - name: backend-pod
          image: image-registry.openshift-image-registry.svc:5000/amisha-jenkins/node-backend:17
          ports:
            - containerPort: 5000
---
kind: Service
apiVersion: v1
metadata:
  name: backend-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 5000
      port: 5000
  selector:
    app: expense-tracker

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: backend-route
  namespace: amisha-jenkins
  labels:
    app: expense-tracker
spec:
  to:
    kind: Service
    name: backend-service
  port:
    targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: expense-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-tracker
  template:
    metadata:
      name: frontend-pod
      labels:
        app: expense-tracker
    spec:
      containers:
        - name: frontend-pod
          image: image-registry.openshift-image-registry.svc:5000/amisha-jenkins/node-frontend:17
          ports:
            - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 3000
  selector:
    app: expense-tracker

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend-route
  namespace: amisha-jenkins
  labels:
    app: expense-tracker
spec:
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: 3000
